AUTOMAKE_OPTIONS = foreign

sbin_PROGRAMS = canna2imm32

canna2imm32_SOURCES = cannaproto.c cannasocket.c imewrapper.c main.c misc.c winimm.c cannaproto.h cannasocket.h constdef.h def.h imewrapper.h misc.h winimm.h

canna2imm32_LDADD = 

EXTRA_DIST = esecanna_orig/4DEVELOPERS.jp esecanna_orig/CHANGES.jp esecanna_orig/INSTALL.jp \
		esecanna_orig/README.First.jp esecanna_orig/README.jp \
		ReadMe1st.txt AUTHORS ChangeLog COPYING NEWS README canna2imm32rc
sysconf_DATA = canna2imm32rc
