dnl Process this file with autoconf to produce a configure script.
AC_INIT(cannaproto.c)

AM_INIT_AUTOMAKE(canna2imm32, 1.0.1)
AC_DEFINE_UNQUOTED(RCPATH, "@sysconfdir@")
AC_DEFINE(DLLPATH, "@libdir@/esecanna")
AC_DEFINE(PIDPATH, "/var/run")
AC_DEFINE(LOGPATH, "/var/log")

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lgdi32:
AC_CHECK_LIB(gdi32, main)
dnl Replace `main' with a function in -liconv:
AC_CHECK_LIB(iconv, main)
dnl Replace `main' with a function in -limm32:
AC_CHECK_LIB(imm32, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname mkdir select socket strdup strstr)

AC_OUTPUT(Makefile)
